updated whole codebase and skillsets

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
 
   <!-- navbar starts -->
   <header>
-    <a href="/404.html" class="logo"><i class="fas fa-code"></i> MOHAMMAD AAMIR</a>
+    <a href="/" class="logo"><i class="fas fa-code"></i> MOHAMMAD AAMIR</a>
 
     <div id="menu" class="fas fa-bars"></div>
     <nav class="navbar">
