--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           <div class="desc">
             <h3> MERN Developer</h3>
             <!-- <h2>Created  Acheiver</h2> -->
-            <p>Sep 2024 - Present</p>
+            <p>Sep 2024 - Dec 2024</p>
             <p>Developed the web pages and improved its accuracy </p>
             <!-- In order to add the link to the more section include this below link-->
             <!-- <p>Developed the web pages and improved its accuracy <a href="/problems/" style="color: #ffee00;">here</a></p> -->
